--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <a href="http://games.1023mb.net">
       <div class="iconDiv">
-        <img class="iconImg" src="/Icons/Games_Icon.png" />
+        <img class="iconImg" src="Games_Icon.png" />
         <p>Games</p>
       </div>
     </a>
