--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <a href="/beamloading">
       <div class="iconDiv">
-        <img class="iconImg" src="Icons/Games_Icon.png" />
+        <img class="iconImg" src="Icons/Beam_Loading_Icon.png" />
         <p>Beam Load Calculator</p>
       </div>
     </a>
