--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
-    <a href="http://games.1023mb.net"> Games </a>
+    <a href="http://games.1023mb.net" style = "color: #dddddd"> Games </a>
     <br>
     
     <a href="/beamloading">
