--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <a href="/electricfieldcalculator">
       <div class="iconDiv">
         <img class="iconImg" src="Icons/Electric_Field_Calculator_Icon.png" />
-        <p>Beam Load Calculator</p>
+        <p>Beam Electric Field Calculator</p>
+      </div>
+    </a>
+    
+    <a href="/mixturephasecalculator">
+      <div class="iconDiv">
+        <img class="iconImg" src="Icons/Mixture_Phase_Calculator_Icon.png" />
+        <p>Mixture Phase Calculator</p>
       </div>
     </a>
     
