--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="/electricfieldcalculator">
       <div class="iconDiv">
         <img class="iconImg" src="Icons/Electric_Field_Calculator_Icon.png" />
-        <p>Electric Field Calculator</p>
+        <p>Electric Field</p>
       </div>
     </a>
     
