--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="/rsscalc">
       <div class="iconDiv">
         <img class="iconImg" src="Icons/RSSCalc_Icon.png" />
-        <p>RSS Uncertaintyr</p>
+        <p>RSS Uncertainty</p>
       </div>
     </a>
     
