--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     
+    <a style = "color: #dddddd"> Play games here </a> <br>
+    
     <a href="/beamloading">
       <div class="iconDiv">
         <img class="iconImg" src="Icons/Beam_Loading_Icon.png" />
