--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     
-    <a style = "color: #dddddd"> Play games here </a> <br>
+    <h4> <a href="games.1023mb.net" style = "color: #dddddd"> Play games here </a> </h4> <br>
     
     <a href="/beamloading">
       <div class="iconDiv">
