--- a/inversekinematics/index.html
+++ b/inversekinematics/index.html
@@ -75,7 +75,7 @@
 				let l = parseFloat(segmentLengthEl.value);
 				segments = [];
 				for (let i = 0; i < n; i += 1) {
-					segments.push(new Segment(width*0.25, height/2 - 11.5, l, segments[segments.length - 1]));
+					segments.push(new Segment(width*0.25, height/2 - 11.5, l, segments[segments.length - 1], color(random(50, 255), random(50, 255), random(50, 255))));
 				}
 
 				minAngles = {};
@@ -88,11 +88,11 @@
 				}
 			});
 
-			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, undefined, color(random(50, 200), random(50, 200), random(50, 200))));
-			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 200), random(50, 200), random(50, 200))));
-			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 200), random(50, 200), random(50, 200))));
-			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 200), random(50, 200), random(50, 200))));
-			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 200), random(50, 200), random(50, 200))));
+			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, undefined, color(random(50, 255), random(50, 255), random(50, 255))));
+			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 255), random(50, 255), random(50, 255))));
+			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 255), random(50, 255), random(50, 255))));
+			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 255), random(50, 255), random(50, 255))));
+			segments.push(new Segment(width*0.25, height/2 - 11.5, 60, segments[segments.length-1], color(random(50, 255), random(50, 255), random(50, 255))));
 
 			for (let i = 0; i < segments.length; i += 1) {
 				if (i < segments.length - 1) {
@@ -148,11 +148,6 @@
 		function draw() {
 			background(0);
 
-			let groundY = height/2;
-
-			stroke("white");
-
-			line(0, groundY, width, groundY);
 			for (let segment of segments) {
 				segment.setAngle(90);
 				segment.show();
