--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <a href="/mixturephasecalculator">
       <div class="iconDiv">
-        <img class="iconImg" src="Icons/Mixture_Phase_Calculator_Icon.png" />
+        <img class="iconImg" src="Icons/Mixture_Phase_Calculator_Icon.jpg" />
         <p>Mixture Calculator</p>
       </div>
     </a>
