--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     
+    <h2> Tools </h2>
+    <br>
+    <br>
+    
     <a href="/beamloading">
       <div class="iconDiv">
         <img class="iconImg" src="Icons/Beam_Loading_Icon.png" />
