--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>1023mb</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
     
-    <h2> Tools </h2>
+    <h1 style="color: #dddddd"> Tools </h1>
     <br>
     <br>
     
