--- a/collatz.html
+++ b/collatz.html
@@ -84,7 +84,7 @@
         calculateChildren() {
             let child1Val = this.value*2;
             let child2Val = (this.value-1)/3;
-            if (child2Val%1 == 0) {
+            if (child2Val%1 != 0) {
                 child2Val = -1;
             }
             for (let num of tree.nums) {
@@ -105,7 +105,7 @@
                 }
                 tree.dy = height*0.75/tree.height;
             }
-            if (child2Val%1 == 0 && child2Val != -1 && child2Val > 0) {
+            if (child2Val != -1 && child2Val > 0) {
                 let child = new Num(child2Val, this.height + 1);
                 this.children.push(child);
                 tree.nums.push(child);
@@ -114,6 +114,10 @@
                     tree.nodeRadius *= 0.95;
                 }
                 tree.dy = height*0.75/tree.height;
+            }
+
+            if (child1Val == -1 && child2Val == -1) {
+                this.hasNoChildren = true;
             }
         }
     }
