--- a/soundTest.html
+++ b/soundTest.html
@@ -13,7 +13,7 @@
     <input type = "text" id = "limit">
     <button onclick = "go()"> Go </button>
     <button onclick = "stopTone()"> Stop Tone </button>
-    <label> Pitch </label>
+    <label> Pitch Multiplier </label>
     <input type = "text" id = "multiplier" value = 60>
     <br>
     <textarea id = "result" style = "visibility: hidden;" readonly></textarea>
