--- a/oofSongs.html
+++ b/oofSongs.html
@@ -51,11 +51,16 @@
         }
 
         function playNote() {
+            if (i%1 != 0) {
+                g.gain.exponentialRampToValueAtTime(0.00001, context.currentTime + 0.04);
+                i += 0.5;
+                return;
+            }
             g.gain.exponentialRampToValueAtTime(1, context.currentTime + 0.04);
             let note = notes[i];
             if (note == " ") {
                 g.gain.exponentialRampToValueAtTime(0.00001, context.currentTime + 0.04);
-                i+= 1;
+                i+= 0.5;
                 return;
             }
             let freq = freqs[note];
@@ -64,7 +69,7 @@
                 freq *= (Math.random() + 0.5);
             }
             o.frequency.value = freq;
-            i += 1;
+            i += 0.5;
             if (i >= notes.length-1) {
                 o.stop();
                 clearInterval(timer);
