--- a/inversekinematics/index.html
+++ b/inversekinematics/index.html
@@ -28,7 +28,7 @@
         let song;
 
         function preload() {
-            song = loadSound("/September.m4a");
+            song = loadSound("September.m4a");
         }
 
 		function setup() {
