--- a/inversekinematics/index.html
+++ b/inversekinematics/index.html
@@ -40,8 +40,8 @@
 
             let segmentLengthEl = document.querySelector("#segmentLength");
 			segmentLengthEl.addEventListener("change", (event) => {
+                if (isDanceMode) return;
 				let l = parseFloat(segmentLengthEl.value);
-                segmentLength = l;
                 for (let group of groups) {
                     for (let segment of group.segments) {
                         segment.length = l;
@@ -51,6 +51,7 @@
 
 			let numSegmentsEl = document.querySelector("#numSegments");
 			numSegmentsEl.addEventListener("change", (event) => {
+                if (isDanceMode) return;
 				let n = parseFloat(numSegmentsEl.value);
 				if (n > 100) {
 					n = 100;
@@ -67,13 +68,7 @@
 
         function initGroups(numSegments) {
             groups = [];
-            if (!isDanceMode) {
-                groups.push(new Group(createVector(width/2, height*0.9), numSegments));
-            } else {
-                for (let x = width * 0.1; x < width; x += width * 0.2) {
-                    groups.push(new Group(createVector(x, height*0.9), numSegments));
-                }
-            }
+            groups.push(new Group(createVector(width/2, height*0.9), numSegments));
         }
 
         function draw() {
@@ -95,6 +90,7 @@
                 isDanceMode = true;
                 groups = [];
                 for (let x = width * 0.1; x < width; x += width * 0.2) {
+                    segmentLength = 80;
                     groups.push(new Group(createVector(x, height*0.9), numSegments));
                 }
                 song.play();
@@ -120,9 +116,6 @@
 
             solve(targetX, targetY) {
                 let maxIterations = document.getElementById("lockInPlace").checked ? 2 : 1;
-                if (isDanceMode) {
-                    maxIterations = 2;
-                }
 
                 for (let i = 0; i < maxIterations; i += 1) {
                     if (i%2 == 0) {
