--- a/index.html
+++ b/index.html
@@ -71,7 +71,36 @@
     <br>
     <h4> <a href="http://games.1023mb.net" style = "color: #dddddd"> Click here to visit the games page </a> </h4>
 
-
-
   </body>
+  
+  <style>
+  body {
+    background-color: #030327;
+  }
+  .iconImg {
+    width: 120px;
+    border-radius: 50%;
+  }
+  p {
+    color: #dddddd;
+  }
+  .iconDiv {
+    width: 150px;
+    height: 160px;
+    display: inline-block;
+    text-align: center;
+    padding-top: 5px;
+  }
+  .iconDiv:hover {
+    background-color: #052549;
+  }
+  .iconDiv:hover > p {
+    color: white;
+  }
+
+  a {
+    text-decoration: none;
+  }
+</style>
+  
 </html>
