--- a/picalc.html
+++ b/picalc.html
@@ -7,7 +7,7 @@
 
 <body>
     <label> Speed </label>
-    <input type = "range" id = "speed" min = 1 max = 100>
+    <input type = "range" id = "speed" min = 1 max = 1000 value = 1>
     <p id = "result"></p>
 </body>
 
@@ -29,7 +29,6 @@
         for (let i = 0; i < speed; i += 1) {
             let x = random(width);
             let y = random(height);
-            ellipse(x, y, 1, 1);
             if (dist(width/2, height/2, x, y) < width/2) {
                 inside += 1;
             } else {
