--- a/picalc.html
+++ b/picalc.html
@@ -29,6 +29,7 @@
         for (let i = 0; i < speed; i += 1) {
             let x = random(width);
             let y = random(height);
+            ellipse(x, y, 1, 1);
             if (dist(width/2, height/2, x, y) < width/2) {
                 inside += 1;
             } else {
