--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <br>
     <br>
-    <h4> <a href="http://games.1023mb.net" style = "color: #dddddd"> Click here to visit the games page </a> </h4>
+    <h2> <a href="http://games.1023mb.net" style = "color: #dddddd"> Click here to visit the games page! </a> </h2>
 
   </body>
   
