--- a/derivative-grapher/index.html
+++ b/derivative-grapher/index.html
@@ -6,10 +6,10 @@
         <script language="javascript" type="text/javascript" src="sketch.js"></script>
     </head>
     <body>
-        <label> y= </label> <input type="text" id="equation" />
+        <label> y= </label> <input type="text" id="equation" value="sin(x)"/>
         <button onclick = "setVals()"> Go </button>
         <button id="showDerivative" onclick = "showDerivative()" style="visibility: hidden;"> Animate Derivative </button>
-        <input type = "checkbox" id="dragDerivative" value="sin(x)" style="visibility: hidden;" /> <label id="dragDerivativeLabel" style="visibility: hidden;"> Drag Derivative </label>
+        <input type = "checkbox" id="dragDerivative" style="visibility: hidden;" /> <label id="dragDerivativeLabel" style="visibility: hidden;"> Drag Derivative </label>
         <br />
         <br />
         <label> Domain </label> <input type="text" id="minX" value="-10" style="width: 50px;" /> <input type="text" id="maxX" value="10" style="width: 50px;" />
