--- a/derivative-grapher/index.html
+++ b/derivative-grapher/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <label> y= </label> <input type="text" id="equation" value="sin(x)"/>
-        <button onclick = "setVals()"> Go </button>
+        <button onclick = "setVals()"> Graph </button>
         <button id="showDerivative" onclick = "showDerivative()" style="visibility: hidden;"> Animate Derivative </button>
         <input type = "checkbox" id="dragDerivative" style="visibility: hidden;" /> <label id="dragDerivativeLabel" style="visibility: hidden;"> Drag Derivative </label>
         <br />
