--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
     </a>
 
-    <a href="/electricfieldcalculator">
+    <a href="/derivative-grapher">
       <div class="iconDiv">
-        <img class="iconImg" src="Icons/Electric_Field_Calculator_Icon.png" />
+        <img class="iconImg" src="Icons/Derivative_Grapher_Icon.png" />
         <p>Electric Field</p>
       </div>
     </a>
