--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="/derivative-grapher">
       <div class="iconDiv">
         <img class="iconImg" src="Icons/Derivative_Grapher_Icon.png" />
-        <p>Electric Field</p>
+        <p>Derivative Grapher</p>
       </div>
     </a>
 
