--- a/derivative-grapher/index.html
+++ b/derivative-grapher/index.html
@@ -8,8 +8,8 @@
     <body>
         <label> y= </label> <input type="text" id="equation" value="sin(x)"/>
         <button onclick = "setVals()"> Graph </button>
-        <button id="showDerivative" onclick = "showDerivative()" style="visibility: hidden;"> Animate Derivative </button>
-        <input type = "checkbox" id="dragDerivative" style="visibility: hidden;" /> <label id="dragDerivativeLabel" style="visibility: hidden;"> Drag Derivative </label>
+        <button id="showDerivative" onclick = "showDerivative()" style="visibility: hidden;"> Animate Tangent Line </button>
+        <input type = "checkbox" id="dragDerivative" style="visibility: hidden;" /> <label id="dragDerivativeLabel" style="visibility: hidden;"> Drag Tangent Line </label>
         <br />
         <br />
         <label> Domain </label> <input type="text" id="minX" value="-10" style="width: 50px;" /> <input type="text" id="maxX" value="10" style="width: 50px;" />
