--- a/sierpinski.html
+++ b/sierpinski.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <label> Size </label>
-        <input type="range" id="sizeInput" min="0.5" max="10" step="0.01" oninput="lineSize=this.value" onchange="lineSize=this.value"/>
+        <input type="range" id="sizeInput" min="0.5" max="10" step="0.01" value="3" oninput="lineSize=this.value" onchange="lineSize=this.value"/>
         <label> Iterations </label>
-        <input type="range" id="sizeInput" min="4" max="10" step="2" oninput="restart(this.value)" onchange="restart(this.value)"/>
+        <input type="range" id="sizeInput" min="4" max="10" step="2" value="8" oninput="restart(this.value)" onchange="restart(this.value)"/>
         <br>
     </body>
 
