--- a/sierpinski.html
+++ b/sierpinski.html
@@ -16,12 +16,12 @@
         let instructions = "x";
         let n = 8;
         let lineSize = 3;
+        let sixthPi = Math.PI/3;
 
 
         function setup() {
             createCanvas(800, 800);
             stroke(255);
-            angleMode(DEGREES);
             restart(n);
         }
 
@@ -34,20 +34,6 @@
                     instructions = front + back;
                 }
             }
-
-            // This looks to be slower
-
-            // for (let i = 0; i < n; i++) {
-            //     instructions = instructions.split("");
-            //     for (let j = instructions.length-1; j >= 0; j -= 2) {
-            //         if (instructions[j] == "x") {
-            //             instructions[j] = "y+x+y";
-            //         } else if (instructions[j] == "y") {
-            //             instructions[j] = "x-y-x";
-            //         }
-            //     }
-            //     instructions = instructions.join("");
-            // }
         }
 
         function draw() {
@@ -56,34 +42,17 @@
             let y = height*0.95
             let angle = 0;
             for (let i = 1; i < instructions.length; i += 2) {
-                let dx = lineSize*cos(angle);
-                let dy = lineSize*sin(angle);
+                let dx = lineSize*Math.cos(angle);
+                let dy = lineSize*Math.sin(angle);
                 line(x, y, x+dx, y+dy);
                 x += dx;
                 y += dy;
                 if (instructions[i] == "+") {
-                    angle += 60;
+                    angle += sixthPi;
                 } else {
-                    angle -= 60;
+                    angle -= sixthPi;
                 }
             }
-
-
-            // This looks to be slower
-
-            // background(0);
-            // translate(width * 0.05, height * 0.95);
-
-            // for (let i = 1; i < instructions.length; i += 2) {
-            //     line(0, 0, lineSize, 0);
-            //     translate(lineSize, 0);
-            //     if (instructions[i] == "+") {
-            //         rotate(60);
-            //     } else {
-            //         rotate(-60);
-            //     }
-
-            // }
         }
 
     </script>
