--- a/sierpinski.html
+++ b/sierpinski.html
@@ -16,7 +16,7 @@
         let instructions = "x";
         let n = 8;
         let lineSize = 3;
-        let sixthPi = Math.PI/3;
+        let thirdPi = Math.PI/3;
 
 
         function setup() {
@@ -48,9 +48,9 @@
                 x += dx;
                 y += dy;
                 if (instructions[i] == "+") {
-                    angle += sixthPi;
+                    angle += thirdPi;
                 } else {
-                    angle -= sixthPi;
+                    angle -= thirdPi;
                 }
             }
         }
